--- a/resources/properties.ini
+++ b/resources/properties.ini
@@ -5,26 +5,33 @@
 ; key[] = value                    > parse_ini_file("configuration.ini")['key'][index]
 ; key[key] = value                 > parse_ini_file("configuration.ini")['key'][key]
 
-debug.level = 5;
+debug.level = 5
 
-db.host = '';
-db.name = '';
-db.user = '';
-db.pass = '';
+db.host = ''
+db.name = ''
+db.user = ''
+db.pass = ''
 
-path.core = 'core';
-path.controller = 'controller/';
-path.dao = 'dao/';
-path.form = 'form/';
-path.model = 'model/';
-path.utils = 'utils/';
-path.constants = 'constants/';
-path.header = 'page/layout/header/';
-path.footer = 'page/layout/footer/';
-path.misc = 'page/layout/misc/';
+path.core = 'core'
+path.controller = 'controller/'
+path.dao = 'dao/'
+path.dto = 'dto/'
+path.request = 'request/'
+path.response = 'response/'
+path.model = 'model/'
+path.utils = 'utils/'
+path.service = 'service/'
+path.constants = 'constants/'
+path.page = 'page/'
+path.header = 'page/layout/header/'
+path.footer = 'page/layout/footer/'
+path.misc = 'page/layout/misc/'
 path.css = 'static/css/'
-path.js = 'static/js/';
+path.js = 'static/js/'
+path.file = 'static/file/'
 
-file.ext.controller = 'Controller';
-
-
+file.ext.controller = 'Controller'
+file.ext.dto = 'Dto'
+file.ext.request = 'Request'
+file.ext.response = 'Response'
+file.ext.service = 'Service'
